Added score window, updated dependencies

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
         return height / 3 - WizardHeight;
       };
     </script>
+    <script src="js/stat.js"></script>
     <script src="js/game.js"></script>
   </body>
 </html>
